hphp/hack/test/typecheck/inout/bad_inout_use_lvalue5.php.exp
File "bad_inout_use_lvalue5.php", line 6, characters 11-22:
You cannot decorate this argument as `inout` (Parsing[1002])
File "bad_inout_use_lvalue5.php", line 6, characters 11-22:
`list()` can only be used for destructuring assignment. Did you mean `tuple()` or `vec[]`? (NastCheck[3092])
File "bad_inout_use_lvalue5.php", line 6, characters 5-22:
Invalid argument (Typing[4110])
  File "bad_inout_use_lvalue5.php", line 3, characters 18-28:
  Expected `vec<int>`
  File "bad_inout_use_lvalue5.php", line 6, characters 11-22:
  But got `(int, int)`
